--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>calm galaxy</title>
 </head>
 
-
+<body>
 <div class="main"></div>
 
 <div id="logo">
@@ -116,7 +116,7 @@
   <a href="merch.html" class="us">о нас</a>
   <a href="merch.html" class="merch">Мерч</a>
   <a href="merch.html" class="poster">афиша</a>
-  <a href="merch.html" class="buy">Корзина (0)</a>
+  <a href="error.html" class="buy">Корзина (0)</a>
   <img src="img/location.svg" alt="Location" class="locationimage">
   <div class="footer">Космическая станция "Supernova", Марс 54</div>
 </nav>
@@ -127,3 +127,4 @@
     © Copyright 2022. All Rights Reserved by Supernova
   </div>
 </footer>
+</body>
