--- a/merch.html
+++ b/merch.html
@@ -3,58 +3,136 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./stylesheets2/style2.css">
+  <script src="Javascript1/button.js"></script>
+  <script src="Javascript1/basket.js"></script>
+
   <title>merch</title>
 </head>
 
+<body>
+  <div class="main"></div>
 
-<div class="main"></div>
+  <div id="logo">
 
-<div id="logo">
+    <img src="img/logo.svg" alt="Image 1" class="logo-img">
+  </div>
 
-  <img src="img/logo.svg" alt="Image 1" class="logo-img">
-</div>
-
- <nav class="nav-line">
-     <a href="index.html"  class="us">о нас</a>
-    <a href="merch.html"  class="merch">Мерч</a>
-    <a href="merch.html" class="poster">афиша</a>
-    <a href="merch.html"   class="buy">Корзина (0)</a>
+  <nav class="nav-line">
+    <a href="index.html" class="us">о нас</a>
+    <a href="merch.html" class="merch">Мерч</a>
+    <a href="poster.html" class="poster">афиша</a>
+    <a href="error.html" class="buy">Корзина (0)</a>
   </nav>
 
 
-<div class="text1">
-  <span class="line1">
-    <span>ф<span class="yellow">и</span>рм<span class="purple">е</span>нн<span class="yellow">ы</span> </span>
-    <span class="line2">
-      <span>м</span><span class="purple">е</span><span>рч</span>
-</div>
-
-
-<div class="text2">
-  <span class="line2-1">
-    <span>Мы создаём мерч с идеей. Лимитированные тиражи,</span>
-    <span class="line2-2">
-      <span>узнаваемый стиль, никакой случайности — только </span>
-      <span class="line2-3">
-      <span>энергия  и дизайн, который говорит сам за себя </span>
-</div>
-
-
-
-
-<nav class="nav-line2">
-  <a href="index.html" class="us2">о нас</a>
-  <a href="merch.html" class="merch2">Мерч</a>
-  <a href="merch.html" class="poster2">афиша</a>
-  <a href="merch.html" class="buy2">Корзина (0)</a>
-
-  <img src="img/location.svg" alt="Location" class="locationimage">
-  <div class="footer">Космическая станция "Supernova", Марс 54</div>
-</nav>
-
-<footer class="site-footer">
-  <hr>
-  <div class="copyright">
-    © Copyright 2022. All Rights Reserved by Supernova
+  <div class="text1">
+    <span class="line1">
+      <span>ф<span class="yellow">и</span>рм<span class="purple">е</span>нн<span class="yellow">ы</span> </span>
+      <span class="line2">
+        <span>м</span><span class="purple">е</span><span>рч</span>
   </div>
-</footer>
+
+
+  <div class="text2">
+    <span class="line2-1">
+      <span>Мы создаём мерч с идеей. Лимитированные тиражи,</span>
+      <span class="line2-2">
+        <span>узнаваемый стиль, никакой случайности — только </span>
+        <span class="line2-3">
+          <span>энергия и дизайн, который говорит сам за себя </span>
+  </div>
+
+
+
+
+  <div class="wrapper">
+    <!-- 1) Text that sits on top -->
+    <div class="text-top1">
+      <span>Браслеты</span>
+      <span>Чипсы</span>
+      <span>Пейджики</span>
+    </div>
+    <div class="text-bottom1">
+      <span>50$</span>
+      <span>4$</span>
+      <span>12$</span>
+    </div>
+
+    <!-- 2) Row of three images, below the text -->
+    <div class="img-row1">
+      <img src="img/img1.svg" alt="Image 1">
+      <img src="img/img2.svg" alt="Image 2">
+      <img src="img/img3.svg" alt="Image 3">
+    </div>
+
+
+  </div>
+
+  <!-- First row of 3 plus‐buttons -->
+  <div class="btn-row1">
+    <div class="plus-btn">+</div>
+        <div class="plus-btn">+</div>
+            <div class="plus-btn">+</div>
+
+
+  </div>
+
+
+  <!-- Middle single image -->
+  <div class="img-mid">
+    <img src="img/img4.svg" alt="Image 4">
+  </div>
+  <div class="text-mid">
+    <span>Газировка</span>
+    <span>50$</span>
+  </div>
+  <!-- Single plus‐button under the middle image -->
+  <div class="btn2">
+    <div class="plus-btn">+</div>
+  </div>
+
+  <div class="wrapper">
+    <!-- 1) Text that sits on top -->
+    <div class="text-top2">
+      <span>шарики</span>
+      <span>значки</span>
+      <span>брелок</span>
+    </div>
+    <div class="text-bottom2">
+      <span>50$</span>
+      <span>4$</span>
+      <span>12$</span>
+    </div>
+
+    <!-- Second row of 3 images -->
+    <div class="img-row2">
+      <img src="img/img5.svg" alt="Image 5">  
+      <img src="img/img6.svg" alt="Image 6">
+      <img src="img/img7.svg" alt="Image 7">
+    </div>
+  </div>
+  <!-- Second row of 3 plus‐buttons -->
+  <div class="btn-row2">
+       <div class="plus-btn">+</div>
+        <div class="plus-btn">+</div>
+            <div class="plus-btn">+</div>
+  </div>
+
+
+  <nav class="nav-line2">
+    <a href="index.html" class="us2">о нас</a>
+    <a href="merch.html" class="merch2">Мерч</a>
+    <a href="poster.html" class="poster2">афиша</a>
+    <a href="error.html" class="buy2">Корзина (0)</a>
+
+    <img src="img/location.svg" alt="Location" class="locationimage">
+    <div class="footer">Космическая станция "Supernova", Марс 54</div>
+  </nav>
+
+  <footer class="site-footer">
+    <hr>
+    <div class="copyright">
+      © Copyright 2022. All Rights Reserved by Supernova
+    </div>
+  </footer>
+</body>
