--- a/error.html
+++ b/error.html
@@ -17,10 +17,10 @@
 
    <div class="text3">
     <span class="line3-1">
-      <span>УПС, кажется что-то </span>
+      <span>УПС, КАЖЕТСЯ ЧТО-ТО </span>
       <span class="line3-2">
-        <span>пошло не так..... </span>
+        <span>ПОШЛО НЕ ТАК..... </span>
   </div>
-   <a href="merch.html" class="button3">вернуться на главную</a>
+   <a href="merch.html" class="button3">ВЕРНУТЬСЯ НА ГЛАВНУЮ</a>
 
 </body>
