--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <img src="img/logo.svg" alt="Image 1" class="logo-img">
 </div>
 <div class="header-line">
-  <span>Новая программа </span>
-  <span>космический фестиваль</span>
+  <span>НОВАЯ ПРОГРАММА </span>
+  <span>КОСМИЧЕСКИЙ ФЕСТИВАЛЬ</span>
   <span>20.03.2025</span>
 </div>
 
@@ -39,17 +39,15 @@
       <span>каждый гость становится частью праздника! </span>
 </div>
 
-<a href="merch.html" class="btn1">УЗНАТЬ БОЛЬШЕ</a>
+<a href="rocket.html" class="btn1">УЗНАТЬ БОЛЬШЕ</a>
 
 <div class="container">
   <div class="square">
-    <div class="badge1">Мерч</div>
-
     <p>Создан для тех, кто в теме.</p>
     <p>Ограниченный тираж, особая</p>
-    <p>p>энергия, нет случайной детали.</p>
+    <p>энергия, нет случайной детали.</p>
     <p>Смотри сам — кликай и выбирай</p>
-    <a href="merch.html" class="action-btn2">Посмотреть мерч</a>
+    <a href="merch.html" class="action-btn2">ПОСМОТРЕТЬ МЕРЧ</a>
 
 
 
@@ -62,19 +60,18 @@
   </div>
   <div class="square">
     <p>Организовали более 30</p>
-    <p>естивалей. Посетили 10 </p>
-    <p>планет.Собрали свыше 50 000</p>
-    <p>гостей.Объединили 20 рас.</p>
+    <p>фестивалей. Посетили 10 планет.</p>
+    <p>Собрали свыше 50 000 гостей.</p>
+    <p>Объединили 20 рас.</p>
     <p>Первый фестиваль на орбите.</p>
   </div>
   <div class="square">
-    <div class="badge2">АФИША</div>
-
     <p>Смотри, что уже было, что</p>
     <p> идёт прямо сейчас и что ещё </p>
-    <p>впереди.Рейвы и фестивали </p>
-    <p>— всё в одном месте.Кликай и исследуй космос событий.</p>
-    <a href="merch.html" class="action-btn3">узнать новинки</a>
+    <p>впереди. Рейвы и фестивали </p>
+    <p>— всё в одном месте. +-Кликай </p>
+      <p>и исследуй космос событий.</p>
+    <a href="merch.html" class="action-btn3">УЗНАТЬ АФИШУ</a>
 
   </div>
 </div>
@@ -89,7 +86,7 @@
 
 
 <div class="half-right">
-  <h2>Подпишись, будь в курсе <br>последних фестивалей<br>и оставайся на связи</h2>
+  <h2>ПОДПИШИСЬ, БУДЬ ВКУРСЕ <br>ПОСЛЕДНИХ ФЕСТИВАЛЕЙ<br>И ОСТАВАЙСЯ НА СВЯЗИ</h2>
   <form>
     <label>
       Имя
@@ -107,18 +104,18 @@
       Есть что написать?
       <textarea placeholder="Может какие-то вопросы или предложения?"></textarea>
     </label>
-     <a href="merch.html" class="action-submit">Отправить</a>
+     <a href="merch.html" class="action-submit">ОТПРАВИТЬ</a>
 
   </form>
 </div>
 
 <nav class="nav-line">
-  <a href="merch.html" class="us">о нас</a>
-  <a href="merch.html" class="merch">Мерч</a>
-  <a href="merch.html" class="poster">афиша</a>
-  <a href="error.html" class="buy">Корзина (0)</a>
+  <a href="index.html" class="us">О НАС</a>
+  <a href="merch.html" class="merch">МЕРЧ</a>
+  <a href="poster.html" class="poster">АФИША</a>
+  <a href="error.html" class="buy">КОРЗИНА (0)</a>
   <img src="img/location.svg" alt="Location" class="locationimage">
-  <div class="footer">Космическая станция "Supernova", Марс 54</div>
+  <div class="footer">КОСМИЧЕСКАЯ СТАНЦИЯ «SUPERNOVA», МАРС 54</div>
 </nav>
 
 <footer class="site-footer">
