--- a/merch.html
+++ b/merch.html
@@ -18,10 +18,10 @@
   </div>
 
   <nav class="nav-line">
-    <a href="index.html" class="us">о нас</a>
-    <a href="merch.html" class="merch">Мерч</a>
-    <a href="poster.html" class="poster">афиша</a>
-    <a href="error.html" class="buy">Корзина (0)</a>
+    <a href="index.html" class="us">О НАС</a>
+    <a href="merch.html" class="merch">МЕРЧ</a>
+    <a href="poster.html" class="poster">АФИША</a>
+    <a href="error.html" class="buy">КОРЗИНА (0)</a>
   </nav>
 
 
@@ -35,11 +35,11 @@
 
   <div class="text2">
     <span class="line2-1">
-      <span>Мы создаём мерч с идеей. Лимитированные тиражи,</span>
+      <span>МЫ СОЗДАЁМ МЕРЧ С ИДЕЕЙ. ЛИМИТИРОВАННЫЕ ТИРАЖИ,</span>
       <span class="line2-2">
-        <span>узнаваемый стиль, никакой случайности — только </span>
+        <span>УЗНАВАЕМЫЙ СТИЛЬ, НИКАКОЙ СЛУЧАЙНОСТИ — ТОЛЬКО </span>
         <span class="line2-3">
-          <span>энергия и дизайн, который говорит сам за себя </span>
+          <span>ЭНЕРГИЯ И ДИЗАЙН, КОТОРЫЙ ГОВОРИТ САМ ЗА СЕБЯ. </span>
   </div>
 
 
@@ -48,9 +48,9 @@
   <div class="wrapper">
     <!-- 1) Text that sits on top -->
     <div class="text-top1">
-      <span>Браслеты</span>
-      <span>Чипсы</span>
-      <span>Пейджики</span>
+      <span>БРАСЛЕТЫ</span>
+      <span>ЧИПСЫ</span>
+      <span>ПЕЙДЖИКИ</span>
     </div>
     <div class="text-bottom1">
       <span>50$</span>
@@ -83,7 +83,7 @@
     <img src="img/img4.svg" alt="Image 4">
   </div>
   <div class="text-mid">
-    <span>Газировка</span>
+    <span>ГАЗИРОВКА</span>
     <span>50$</span>
   </div>
   <!-- Single plus‐button under the middle image -->
@@ -94,9 +94,9 @@
   <div class="wrapper">
     <!-- 1) Text that sits on top -->
     <div class="text-top2">
-      <span>шарики</span>
-      <span>значки</span>
-      <span>брелок</span>
+      <span>ШАРИКИ</span>
+      <span>ЗНАЧКИ</span>
+      <span>БРЕЛОК</span>
     </div>
     <div class="text-bottom2">
       <span>50$</span>
@@ -120,13 +120,13 @@
 
 
   <nav class="nav-line2">
-    <a href="index.html" class="us2">о нас</a>
-    <a href="merch.html" class="merch2">Мерч</a>
-    <a href="poster.html" class="poster2">афиша</a>
-    <a href="error.html" class="buy2">Корзина (0)</a>
+    <a href="index.html" class="us2">О НАС</a>
+    <a href="merch.html" class="merch2">МЕРЧ</a>
+    <a href="poster.html" class="poster2">АФИША</a>
+    <a href="error.html" class="buy2">КОРЗИНА (0)</a>
 
     <img src="img/location.svg" alt="Location" class="locationimage">
-    <div class="footer">Космическая станция "Supernova", Марс 54</div>
+    <div class="footer">КОСМИЧЕСКАЯ СТАНЦИЯ «SUPERNOVA», МАРС 54</div>
   </nav>
 
   <footer class="site-footer">
