--- a/poster.html
+++ b/poster.html
@@ -17,12 +17,11 @@
   </div>
 
   <nav class="nav-line">
-    <a href="index.html" class="us">о нас</a>
-    <a href="merch.html" class="merch">Мерч</a>
-    <a href="merch.html" class="poster">афиша</a>
-    <a href="merch.html" class="buy">Корзина (0)</a>
+    <a href="index.html" class="us">О НАС</a>
+    <a href="merch.html" class="merch">МЕРЧ</a>
+    <a href="poster.html" class="poster">АФИША</a>
+    <a href="error.html" class="buy">КОРЗИНА (0)</a>
   </nav>
-
 
   <div class="text1">
     <span class="line1">
@@ -34,14 +33,14 @@
 
   <div class="text2"> 
     <span class="line2-1">
-      <span>Собираем людей и поводы встретиться. Следи за </span>
+      <span>СОБИРАЕМ ЛЮДЕЙ И ПОВОДЫ ВСТРЕТИТЬСЯ.  </span>
       <span class="line2-2">
-        <span>последними событиями и ознакомься с тем, что уже</span>
+        <span> СЛЕДИ ЗА ПОСЛЕДНИМИ СОБЫТИЯМИ И ОЗНАКОМЬСЯ С ТЕМ, </span>
         <span class="line2-3">
-          <span>прошло, чтобы быть вкурсе нашего масштаба </span>
+          <span>ЧТО УЖЕ ПРОШЛО, ЧТОБЫ БЫТЬ ВКУРСЕ НАШЕГО МАСШТАБА </span>
   </div>
 
-  <div class="text3"> Предстоящие ивенты </div>
+  <div class="text3"> ПРЕДСТОЯЩИЕ ИВЕНТЫ </div>
 
   <!-- ─── Grey box with 10 posters ─── -->
    <div class="grey-box">
@@ -67,7 +66,7 @@
     </div>
   </div>
 
-    <div class="text4"> Архивные истории </div>
+    <div class="text4"> АРХИВНЫЕ ИСТОРИИ </div>
 
 
 <div class="grey-box">
@@ -93,15 +92,14 @@
     </div>
   </div>
 
-
   <nav class="nav-line2">
-    <a href="index.html" class="us2">о нас</a>
-    <a href="merch.html" class="merch2">Мерч</a>
-    <a href="merch.html" class="poster2">афиша</a>
-    <a href="merch.html" class="buy2">Корзина (0)</a>
+    <a href="index.html" class="us2">О НАС</a>
+    <a href="merch.html" class="merch2">МЕРЧ</a>
+    <a href="poster.html" class="poster2">АФИША</a>
+    <a href="error.html" class="buy2">КОРЗИНА (0)</a>
 
     <img src="img/location.svg" alt="Location" class="locationimage">
-    <div class="footer">Космическая станция "Supernova", Марс 54</div>
+    <div class="footer">КОСМИЧЕСКАЯ СТАНЦИЯ «SUPERNOVA», МАРС 54</div>
   </nav>
 
   <footer class="site-footer">
