--- a/rocket.html
+++ b/rocket.html
@@ -16,11 +16,18 @@
 
     <img src="img/logo.svg" alt="Image 1" class="logo-img">
 </div>
+ <nav class="nav-line">
+    <a href="index.html" class="us">О НАС</a>
+    <a href="merch.html" class="merch">МЕРЧ</a>
+    <a href="poster.html" class="poster">АФИША</a>
+    <a href="error.html" class="buy">КОРЗИНА (0)</a>
+  </nav>
 <div class="header-line">
-    <span>Новая программа </span>
-    <span>космический фестиваль</span>
-    <span>20.03.2025</span>
+  <span>НОВАЯ ПРОГРАММА </span>
+  <span>КОСМИЧЕСКИЙ ФЕСТИВАЛЬ</span>
+  <span>20.03.2025</span>
 </div>
+
 
 
 
@@ -36,19 +43,19 @@
 
 <div class="text2">
     <span class="line2-1">
-        <span>Уникальное космическое приключение, где</span>
+        <span>Уникальное космическое приключение, </span>
         <span class="line2-2">
-            <span>каждый гость становится частью праздника! </span>
+            <span> где каждый гость становится частью праздника! </span>
 </div>
 
-<a href="merch.html" class="btn1">УЗНАТЬ БОЛЬШЕ</a>
+<a href="https://www.calameo.com/read/00787098537b13c68322d" class="btn1">ОТКРЫТЬ БРОШЮРУ</a>
 
 
 
 <div class="gallery">
     <!-- Left full-height image -->
     <div class="left">
-        <img src="img/Rocket.svg"" alt=" Image 1">
+        <img src="img/Rocket.svg" alt=" Image 1">
     </div>
 
     <!-- Right half -->
@@ -61,20 +68,21 @@
     </div>
  
 </div>
-
 <div class="extra-row">
-            <img src="img/cafe2.svg" alt="Image 4">
-        <img src="img/merch.svg" alt="Image 5">
+  <img src="img/cafe2.svg" alt="Cafe" class="extra-img extra-cafe">
+  <img src="img/merch.svg" alt="Merch" class="extra-img extra-merch">
 </div>
 
-<nav class="nav-line">
-    <a href="merch.html" class="us">о нас</a>
-    <a href="merch.html" class="merch">Мерч</a>
-    <a href="merch.html" class="poster">афиша</a>
-    <a href="error.html" class="buy">Корзина (0)</a>
+  <nav class="nav-line2">
+    <a href="index.html" class="us2">О НАС</a>
+    <a href="merch.html" class="merch2">МЕРЧ</a>
+    <a href="poster.html" class="poster2">АФИША</a>
+    <a href="error.html" class="buy2">КОРЗИНА (0)</a>
+
     <img src="img/location.svg" alt="Location" class="locationimage">
-    <div class="footer">Космическая станция "Supernova", Марс 54</div>
-</nav>
+    <div class="footer">КОСМИЧЕСКАЯ СТАНЦИЯ «SUPERNOVA», МАРС 54</div>
+  </nav>
+
 
 <footer class="site-footer">
     <hr>
