--- a/error.html
+++ b/error.html
@@ -3,11 +3,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./stylesheets3/style3.css">
-  <script src="Javascript1/button.js"></script>
+  <script src="javascript/button.js"></script>
+    <script src="javascript/pointer.js"></script>
+
+    <link rel="icon" type="image/png" href="img/icon.png" />
+
   <title>error</title>
 </head>
 
 <body>
+      <div id="custom-cursor"></div>
+
      <div class="main"></div>
 <div class="error-container">
     <span class="digitfour">4</span>
