--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./stylesheets1/style1.css">
-  <script src="Javascript1/button.js"></script>
+  <script src="javascript/button.js"></script>
+    <script src="javascript/pointer.js"></script>
+
+    <link rel="icon" type="image/png" href="img/icon.png" />
+
+
   <title>calm galaxy</title>
 </head>
 
+
 <body>
+
+
+ 
+  <div id="custom-cursor"></div>
+
+  
+
 <div class="main"></div>
 
 <div id="logo">
@@ -34,47 +47,52 @@
 
 <div class="text2">
   <span class="line2-1">
-    <span>Уникальное космическое приключение, где</span>
+    <span>Уникальное космическое приключение,</span>
     <span class="line2-2">
-      <span>каждый гость становится частью праздника! </span>
+      <span> где каждый гость становится частью праздника! </span>
 </div>
 
 <a href="rocket.html" class="btn1">УЗНАТЬ БОЛЬШЕ</a>
 
 <div class="container">
   <div class="square">
+    <div class="square-content">
     <p>Создан для тех, кто в теме.</p>
     <p>Ограниченный тираж, особая</p>
     <p>энергия, нет случайной детали.</p>
     <p>Смотри сам — кликай и выбирай</p>
     <a href="merch.html" class="action-btn2">ПОСМОТРЕТЬ МЕРЧ</a>
-
-
-
+    </div>
   </div>
   <div class="square">
+        <div class="square-content">
+
     <p>Supernova – это агентство,</p>
     <p>которое организовывает </p>
     <p>яркие и незабываемые </p>
     <p>космические фестивали.</p>
   </div>
+    </div>
   <div class="square">
-    <p>Организовали более 30</p>
-    <p>фестивалей. Посетили 10 планет.</p>
-    <p>Собрали свыше 50 000 гостей.</p>
-    <p>Объединили 20 рас.</p>
-    <p>Первый фестиваль на орбите.</p>
-  </div>
+      <div class="square-content">
+        <p>Организовали более 30</p>
+        <p>фестивалей. Посетили 10 планет.</p>
+        <p>Собрали свыше 50 000 гостей.</p>
+        <p>Объединили 20 рас.</p>
+        <p>Первый фестиваль на орбите.</p>
+      </div>
+    </div>
   <div class="square">
-    <p>Смотри, что уже было, что</p>
-    <p> идёт прямо сейчас и что ещё </p>
-    <p>впереди. Рейвы и фестивали </p>
-    <p>— всё в одном месте. +-Кликай </p>
-      <p>и исследуй космос событий.</p>
-    <a href="merch.html" class="action-btn3">УЗНАТЬ АФИШУ</a>
-
+      <div class="square-content">
+        <p>Смотри, что уже было, что</p>
+        <p>идёт прямо сейчас и что ещё</p>
+        <p>впереди. Рейвы и фестивали</p>
+        <p>— всё в одном месте. Кликай</p>
+        <p>и исследуй космос событий.</p>
+        <a href="poster.html" class="action-btn2">УЗНАТЬ АФИШУ</a>
+      </div>
+    </div>
   </div>
-</div>
 
 <div class="half-block">
   <p>sup<span class="green">e</span> rnova –</p>
@@ -104,7 +122,7 @@
       Есть что написать?
       <textarea placeholder="Может какие-то вопросы или предложения?"></textarea>
     </label>
-     <a href="merch.html" class="action-submit">ОТПРАВИТЬ</a>
+     <a href="error.html" class="action-submit">ОТПРАВИТЬ</a>
 
   </form>
 </div>
