--- a/merch.html
+++ b/merch.html
@@ -3,13 +3,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./stylesheets2/style2.css">
-  <script src="Javascript1/button.js"></script>
-  <script src="Javascript1/basket.js"></script>
-
+  <link rel="icon" type="image/png" href="img/icon.png" />
+  <script src="javascript/button.js"></script>
+  <script src="javascript/basket.js"></script>
+  <script src="javascript/pointer.js"></script>
   <title>merch</title>
 </head>
 
 <body>
+
+    <div id="custom-cursor"></div>
+
   <div class="main"></div>
 
   <div id="logo">
@@ -27,7 +31,7 @@
 
   <div class="text1">
     <span class="line1">
-      <span>ф<span class="yellow">и</span>рм<span class="purple">е</span>нн<span class="yellow">ы</span> </span>
+      <span>ф<span class="yellow">и</span>рм<span class="purple">е</span>нн<span class="yellow">ы</span>й</span>
       <span class="line2">
         <span>м</span><span class="purple">е</span><span>рч</span>
   </div>
@@ -40,13 +44,14 @@
         <span>УЗНАВАЕМЫЙ СТИЛЬ, НИКАКОЙ СЛУЧАЙНОСТИ — ТОЛЬКО </span>
         <span class="line2-3">
           <span>ЭНЕРГИЯ И ДИЗАЙН, КОТОРЫЙ ГОВОРИТ САМ ЗА СЕБЯ. </span>
+            
+
   </div>
 
 
 
 
   <div class="wrapper">
-    <!-- 1) Text that sits on top -->
     <div class="text-top1">
       <span>БРАСЛЕТЫ</span>
       <span>ЧИПСЫ</span>
@@ -58,7 +63,6 @@
       <span>12$</span>
     </div>
 
-    <!-- 2) Row of three images, below the text -->
     <div class="img-row1">
       <img src="img/img1.svg" alt="Image 1">
       <img src="img/img2.svg" alt="Image 2">
@@ -68,7 +72,7 @@
 
   </div>
 
-  <!-- First row of 3 plus‐buttons -->
+ 
   <div class="btn-row1">
     <div class="plus-btn">+</div>
         <div class="plus-btn">+</div>
@@ -78,7 +82,7 @@
   </div>
 
 
-  <!-- Middle single image -->
+  
   <div class="img-mid">
     <img src="img/img4.svg" alt="Image 4">
   </div>
@@ -86,13 +90,12 @@
     <span>ГАЗИРОВКА</span>
     <span>50$</span>
   </div>
-  <!-- Single plus‐button under the middle image -->
+
   <div class="btn2">
     <div class="plus-btn">+</div>
   </div>
 
   <div class="wrapper">
-    <!-- 1) Text that sits on top -->
     <div class="text-top2">
       <span>ШАРИКИ</span>
       <span>ЗНАЧКИ</span>
@@ -104,14 +107,14 @@
       <span>12$</span>
     </div>
 
-    <!-- Second row of 3 images -->
+
     <div class="img-row2">
       <img src="img/img5.svg" alt="Image 5">  
       <img src="img/img6.svg" alt="Image 6">
       <img src="img/img7.svg" alt="Image 7">
     </div>
   </div>
-  <!-- Second row of 3 plus‐buttons -->
+ 
   <div class="btn-row2">
        <div class="plus-btn">+</div>
         <div class="plus-btn">+</div>
