--- a/rocket.html
+++ b/rocket.html
@@ -2,17 +2,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./stylesheets5/style5.css">
-    <script src="Javascript1/poster.js"></script>
-    <title>poster</title>
+  <link rel="stylesheet" href="./stylesheets5/style5.css">
+     <script src="javascript/poster.js"></script>
+       <script src="javascript/button.js"></script>
+       <script src="javascript/pointer.js"></script>
+
+    <title>Rocket</title>
+      <link rel="icon" type="image/png" href="img/icon.png" />
+
 </head>
 
 <title>ROCKET</title>
 </head>
+<body>
 
 <div class="main"></div>
 
 <div id="logo">
+        <div id="custom-cursor"></div>
+
 
     <img src="img/logo.svg" alt="Image 1" class="logo-img">
 </div>
@@ -53,14 +61,13 @@
 
 
 <div class="gallery">
-    <!-- Left full-height image -->
+   
     <div class="left">
         <img src="img/Rocket.svg" alt=" Image 1">
     </div>
 
-    <!-- Right half -->
+   
     <div class="right">
-        <!-- Top: two images side-by-side -->
         <div class="top">
             <img src="img/artist.svg" alt="Image 2">
             <img src="img/cafe.svg" alt="Image 3">
